# mayfile

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  README.zh-CN.md  docker-compose.yml.example
.memory/: long_term.md  short_term.md
assets/: style.css
config/: app.toml.example
locales/: en.toml  zh.toml
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  utils.rs
templates/: 404.html  detail.html  explore.html  index.html  item.html
