[package]
name = "mayfile"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = { version = "0.8.8", features = ["macros", "form"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["fs"] }
